--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       </div>
       <div class="tab">
         <div class="header-icon">
-          <div class="svg tablinks"  onclick="openfbTab('Fbtimeline')" id="defaultOpen"><img src='/fbicons/home.svg' width="30px" height="30px"></div>
-          <div class="svg tablinks" onclick="openfbTab('Fbfriends')"><img src='/fbicons/friends.svg' width="30px" height="30px"></div>
-          <div class="svg tablinks" onclick="openfbTab('Fbmessanger')"><img src='/fbicons/message.svg' width="30px" height="30px"></div>
-          <div class="svg tablinks" onclick="openfbTab('Fbgroup')"><img src='/fbicons/group.svg' width="27px" height="27px"></div> 
-          <div class="svg tablinks" onclick="openfbTab('Fbnotification')"><img src='/fbicons/notification.svg' width="30px" height="30px"></div>
-          <div class="svg tablinks" onclick="openfbTab('Fbvideos')"><img src='/fbicons/video.svg' width="30px" height="30px"></div>  
+          <div class="svg tablinks"  onclick="openfbTab('Fbtimeline')" id="defaultOpen"><img src='fbicons/home.svg' width="30px" height="30px"></div>
+          <div class="svg tablinks" onclick="openfbTab('Fbfriends')"><img src='fbicons/friends.svg' width="30px" height="30px"></div>
+          <div class="svg tablinks" onclick="openfbTab('Fbmessanger')"><img src='fbicons/message.svg' width="30px" height="30px"></div>
+          <div class="svg tablinks" onclick="openfbTab('Fbgroup')"><img src='fbicons/group.svg' width="27px" height="27px"></div> 
+          <div class="svg tablinks" onclick="openfbTab('Fbnotification')"><img src='fbicons/notification.svg' width="30px" height="30px"></div>
+          <div class="svg tablinks" onclick="openfbTab('Fbvideos')"><img src='fbicons/video.svg' width="30px" height="30px"></div>  
         </div>
       </div><!-- class= tab > -->
     </div>
